# SiCKRAGE

./: .bowerrc  .changelogrc  .dockerignore  .eslintrc  .gitignore  .gitlab-ci.yml  .jshintrc  .travis.yml  CHANGELOG.md  COPYING.txt  Dockerfile  Dockerfile.arm32v7  Dockerfile.arm64v8  Gruntfile.js  HELP_ME.txt  MANIFEST.in  README.md  README.txt  SiCKRAGE.py  SickBeard.py  __init__.py  bower.json  build_protos.bat  changelog-template.md  changelog.md  checksum-generator.py  checksum-validator.py  contributing.md  crowdin.yaml  docker-compose.yml  init.debian  init.fedora  init.freebsd  init.gentoo  init.solaris11  init.systemd  init.ubuntu  init.upstart  package-lock.json  package.json  (+11 more)
.build/: Gruntfile.js  bower.json  package.json
.build/patches/: subliminal.patch
.gitlab/issue_templates/: Bug.md  bug.md
.sass-cache/642697f34b0f28f574104d30f83a966ff8675e67/: core.cssc
.travis/: install.sh  run.sh
autoProcessTV/: autoProcessTV.cfg.sample  autoProcessTV.py  hellaToSiCKRAGE.py  hellaToSickBeard.py  mediaToSiCKRAGE.py  mediaToSickbeard.py  sabToSiCKRAGE.py  sabToSickBeard.py
docker/: Dockerfile  Dockerfile.arm32v7  Dockerfile.arm64v8
docker/hooks/: pre_build
lib/: MultipartPostHandler.py  configobj.py  shutil_custom.py
lib/adba/: __init__.py  aniDBAbstracter.py  aniDBcommands.py  aniDBfileInfo.py  aniDBmaper.py  aniDBtvDBmaper.py
lib/anidb_api/: anidb_api.py  anidb_exceptions.py
lib/bencode/: bencode.py
lib/bs4/: __init__.py  dammit.py  diagnose.py
lib/cachecontrol/: controller.py
lib/dateutil/: tz.py  (+3 more)
libs/: decorator.py  dogpile.cache-0.5.7-py2.7-nspkg.pth  ndg_httpsclient-0.4.0-py2.7-nspkg.pth
manifests/: deployment.yaml  ingress.yaml  service.yaml
protos/: announcement_v1.proto  network_timezone_v1.proto  search_provider_url_v1.proto  server_certificate_v1.proto  updates_v1.proto
requirements/: __init__.py  global.txt  optional.txt  sni.txt  ssl.txt
runscripts/: init.debian  init.fedora  init.freebsd  init.gentoo  init.solaris11  init.systemd  init.ubuntu  init.upstart
sickbeard/: __init__.py  adbcache.py  anime_notifications.py  autoPostProcesser.py  auto_postprocessor.py  backlog_searcher.py  blackandwhitelist.py  browser.py  bs4_parser.py  classes.py  common.py  config.py  core.py  daily_searcher.py  dailysearcher.py  db.py  deleteChecker.py  encodingKludge.py  event_queue.py  exceptions.py  failedProcessor.py  failed_history.py  generic_queue.py  gh_api.py  helpers.py  history.py  image_cache.py  imdbPopular.py  imdb_popular.py  logger.py  name_cache.py  naming.py  networkLogo.py  network_timezones.py  nzbSplitter.py  nzbget.py  postProcessor.py  processTV.py  process_tv.py  properFinder.py  (+32 more)
sickrage/: SiCKRAGE.py  SickBeard.py  __init__.py  checksums.md5  constraints.txt  patches.py  requirements.txt  version.txt
src/: app.js
tests/: __init__.py  all_tests.py  common_tests.py  config_tests.py  db_tests.py  encoding_tests.py  feedparser_tests.py  helpers_tests.py  issue_submitter_tests.py  name_parser_tests.py  pp_tests.py  requirements.txt  rss_tests.py  scene_helpers_tests.py  search_tests.py  snatch_tests.py  ssl_sni_tests.py  test_common.py  test_config.py  test_db.py  test_encoding.py  test_helpers.py  test_issue_submitter.py  test_lib.py  test_name_parser.py  test_pp.py  test_providers.py  test_rss_parser.py  test_scene_helpers.py  test_searches.py  test_snatching.py  test_ssl_sni.py  test_torrents.py  test_tv.py  test_version_updating.py  test_web.py  test_xem.py  torrent_tests.py  tv_tests.py  xem_tests.py
tornado/: iostream.py  websocket.py
(+2350 files in other folders)
