[bumpversion]
current_version = 9.4.184.dev7
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<releaselevel>[a-z]+)(?P<preversion>\d+))?
serialize = 
	{major}.{minor}.{patch}.{releaselevel}{preversion}
	{major}.{minor}.{patch}
commit = False
tag = False

[metadata]
description-file = README.txt

[bdist_wheel]
universal = 1

[extract_messages]
width = 80
charset = utf-8
output_file = sickrage/locale/messages.pot
keywords = gt
copyright_holder = SiCKRAGE
msgid_bugs_address = support@sickrage.ca
add_comments = TRANSLATORS:

[compile_catalog]
directory = sickrage/locale

[init_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot

[update_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot
ignore_obsolete = true
previous = true

