[bumpversion]
current_version = 9.4.208.dev2
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	gamma

[metadata]
description-file = README.txt

[bdist_wheel]
universal = 1

[extract_messages]
width = 80
charset = utf-8
output_file = sickrage/locale/messages.pot
keywords = gt
copyright_holder = SiCKRAGE
msgid_bugs_address = support@sickrage.ca
add_comments = TRANSLATORS:

[compile_catalog]
directory = sickrage/locale

[init_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot

[update_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot
ignore_obsolete = true
previous = true

