[bumpversion]
current_version = 10.0.67.dev1
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	gamma

[metadata]
description-file = README.txt

[bdist_wheel]
universal = 1

[extract_messages]
width = 80
charset = utf-8
output_file = sickrage/locale/messages.pot
keywords = gt
copyright_holder = SiCKRAGE
msgid_bugs_address = support@sickrage.ca
add_comments = TRANSLATORS:

[compile_catalog]
directory = sickrage/locale

[init_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot

[update_catalog]
output_dir = sickrage/locale
input_file = sickrage/locale/messages.pot
ignore_obsolete = true
previous = true

[tool:pytest]
python_files = tests/*
filterwarnings = 
	error
	ignore::sqlalchemy.exc.SAWarning
	ignore::pytest.PytestUnraisableExceptionWarning
	ignore:distutils Version classes are deprecated\. Use packaging\.version instead:DeprecationWarning
	ignore:There is no current event loop:DeprecationWarning
	ignore:ssl\.PROTOCOL_TLS is deprecated:DeprecationWarning
	ignore:ssl\.match_hostname\(\) is deprecated:DeprecationWarning
	ignore:the load_module\(\) method is deprecated.*:DeprecationWarning
	ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated.*:DeprecationWarning
	ignore:EntryPoint tuple interface is deprecated. Access members by name:DeprecationWarning
	ignore:_SixMetaPathImporter\.exec_module\(\) not found; falling back to load_module\(\):ImportWarning
	ignore:_SixMetaPathImporter\.find_spec\(\) not found; falling back to find_module\(\):ImportWarning
